--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,22 @@ authors = [
     { name = "Andy Weaver", email = "andrewayersweaver+github@gmail.com" }
 ]
 dependencies = [
-    "plotly>=5.22.0",
-    "pandas>=2.2.2",
-    "polars>=1.0.0",
-    "duckdb>=1.0.0",
+    "plotly==5.18.0",
+    "pandas==2.2.1",
+    "polars==0.20.23",
+    "duckdb>=0.10.1,<0.11.0",
     "fastapi>=0.111.0",
     "aiofiles>=24.1.0",
     "python-dotenv>=1.0.1",
-    "scikit-learn>=1.5.0",
+    "scikit-learn==1.3.2",
+    "ipykernel==6.26.0",
+    "jupyter>=1.0.0",
+    "notebook>=7.2.1",
+    "matplotlib==3.8.1",
+    "pyarrow==15.0.0",
+    "pygwalker==0.4.8.5",
+    "predictables @ git+http://github.com/predictables/predictables",
+    "pyodbc>=5.1.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -28,10 +36,10 @@ managed = true
 dev-dependencies = [
     "ruff>=0.5.0",
     "ruff-lsp>=0.0.54",
-    "mypy>=1.10.1",
-    "pytest>=8.2.2",
-    "coverage>=7.5.4",
-    "pytest-cov>=5.0.0",
+    "mypy==1.9.0",
+    "pytest>=8.0.0",
+    "coverage==7.4.4",
+    "pytest-cov==4.1.0",
 ]
 
 [tool.hatch.metadata]
