--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pygwalker==0.4.8.5",
     "predictables @ git+http://github.com/predictables/predictables",
     "pyodbc>=5.1.0",
+    "dash>=2.17.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
