--- a/src/varclus/pyproject.toml
+++ b/src/varclus/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "lasso-plot"
+name = "varclus"
 version = "0.1.0"
 description = "Add your description here"
 authors = [
@@ -21,7 +21,6 @@ dependencies = [
     "pyarrow==15.0.0",
     "pygwalker==0.4.8.5",
     "predictables @ git+http://github.com/predictables/predictables",
-    "pyodbc>=5.1.0",
     "dash>=2.17.1",
 ]
 readme = "README.md"
@@ -37,7 +36,6 @@ managed = true
 dev-dependencies = [
     "ruff>=0.5.0",
     "ruff-lsp>=0.0.54",
-    "mypy==1.9.0",
     "pytest>=8.0.0",
     "coverage==7.4.4",
     "pytest-cov==4.1.0",
@@ -47,5 +45,4 @@ dev-dependencies = [
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/lasso_plot", "src/cluster_features", "src/varclus"]
-
+packages = ["src/varclus"]
