--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "predictables @ git+http://github.com/predictables/predictables",
     "pyodbc>=5.1.0",
     "dash>=2.17.1",
+    "flask-caching>=2.3.0",
+    "bcrypt>=4.1.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
