--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     "dash>=2.17.1",
     "flask-caching>=2.3.0",
     "bcrypt>=4.1.3",
+    "dash-cytoscape>=1.0.1",
+    "networkx>=3.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
